nginx-exercice-1/solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-unprivileged
  labels:
    app: nginx-unprivileged
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-unprivileged
  template:
    metadata:
      labels:
        app: nginx-unprivileged
        deployment: nginx-unprivileged
    spec:
      containers:
        - name: nginx
          image: ghcr.io/lyeschaya/nginx-formation:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
